Actualizacion detalles venta siguiendo la estructura de las anteriores clases y se hizo la coneccion adecuada para productos y ventas para evitar errores